JO-2008-10-17-0: Bugfix:      dbwriter installation fails if admin_user in bootstrap file is 'none'    
                 Bugster:     6743431
                 Issue:       2712
                 Review:      LP

AP-2008-10-17-0: Bugfix:      All foreign and primary keys in db_definition.xml
                              should be defined as bigint
                 Bugster:     6717825
                 Issue:       2626
                 Review:      JO

JO-2008-09-25-0: Enhancem.:   Fixed Cangelog entry

JO-2008-09-12-0: Bugfix:      Fixed commit JO-2008-08-26-0 - database version upgrade needs to be enhanced
                 Review:      LP

JO-2008-09-10-0: Bugfix:      dbwriter keeps crashing due to inability to close the open cursors   
                 Bugster:     6745913
                 Issue:       2722
                 Review:      LP

JO-2008-08-29-0: Bugfix:      parameters are not replaced during database connection test
                 Bugster:     6742976
                 Issue:       2708
                 Bugfix:      Correction of commit: AP-2008-08-14-0
                 Review:      AP

JO-2008-08-27-0: Enhancem.:   Updated files in www directory for sunsource.net
                 Review:      AP

JO-2008-08-26-0: RFE:         database version upgrade needs to be enhanced
                 Bugster:     6647720
                 Issue:       2453
                 Bugfix:      reporting installation fails with SJWC 3.0.x if $JAVA_HOME is not set to java version at least 1.5
                 Bugster:     6740388
                 Issue:       2696
                 Bugfix:      dbwriter installation doesn't exit when an SQL error happens during database install/upgrade
                 Bugster:     6740404
                 Issue:       2697
                 Bugfix:      Upgrading dbwriter from 6.1u4, 6.1u5 to 6.2 fails on MySQL
                 Bugster:     6740420
                 Issue:       2698
                 Review:      AP
