@@ -1,3 +1,6 @@
+AP-2008-10-20-0: Bugfix:      Fix of  AP-2008-10-17-0: adding the missing file
+                              BigDecimalField.java
+
 JO-2008-10-17-0: Bugfix:      dbwriter installation fails if admin_user in bootstrap file is 'none'    
                  Bugster:     6743431
                  Issue:       2712
